--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="🍳( sal_pipr / ₍₍⁽⁽φ( &lsquo;༥&rsquo; )₎₎⁾⁾ ) の夏休みの日記置き場
 毎年恒例の「存在が夏休みの日記を最後まで書き続けられない祭り」に便乗してみただけ" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://Suu-u.github.io/about/" /><meta property="article:section" content="" />
+<meta property="og:url" content="http://suu-u.github.io/about/" /><meta property="article:section" content="" />
 
 
 
@@ -21,13 +21,13 @@
 <meta name="twitter:description" content="🍳( sal_pipr / ₍₍⁽⁽φ( &lsquo;༥&rsquo; )₎₎⁾⁾ ) の夏休みの日記置き場
 毎年恒例の「存在が夏休みの日記を最後まで書き続けられない祭り」に便乗してみただけ"/>
 <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" media="screen" href="http://Suu-u.github.io/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="http://Suu-u.github.io/css/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="http://suu-u.github.io/css/normalize.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="http://suu-u.github.io/css/main.css" />
 
-        <link id="dark-scheme" rel="stylesheet" type="text/css" href="http://Suu-u.github.io/css/dark.css" />
+        <link id="dark-scheme" rel="stylesheet" type="text/css" href="http://suu-u.github.io/css/dark.css" />
 
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-		<script src="http://Suu-u.github.io/js/main.js"></script>
+		<script src="http://suu-u.github.io/js/main.js"></script>
 </head>
 
 <body>
@@ -35,12 +35,12 @@
 		<div class="header">
 	
 		<div class="avatar">
-			<a href="http://Suu-u.github.io/">
+			<a href="http://suu-u.github.io/">
 				<img src="https://pbs.twimg.com/profile_images/1209658221423550464/3XP8boq9_400x400.png" alt="ただの日記にタイトルなんて要るか" />
 			</a>
 		</div>
 	
-	<h1 class="site-title"><a href="http://Suu-u.github.io/">ただの日記にタイトルなんて要るか</a></h1>
+	<h1 class="site-title"><a href="http://suu-u.github.io/">ただの日記にタイトルなんて要るか</a></h1>
 	<div class="site-description"><p>🍳が夏休みに日記を書くらしい</p><nav class="nav social">
 			<ul class="flat"><li><a href="https://twitter.com/sal_pipr" title="Twitter"><i data-feather="twitter"></i></a></li><li><a href="/index.xml" title="RSS"><i data-feather="rss"></i></a></li><li><a href="#" class="scheme-toggle" id="scheme-toggle"></a></li></ul>
 		</nav>
